upload package version

--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "bluebird": "^3.4.7",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
+    "express-session": "^1.17.0",
+    "flat": "^2.0.1",
+    "node-redis": "^0.1.7",
+    "redis": "^3.0.2"
+  }
 }
