--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "axios": "^0.23.0",
+    "blueimp-md5": "^2.19.0",
+    "firebase": "^7.23.0",
+    "react": "^16.13.0",
+    "react-bootstrap": "^2.0.0-rc.1",
+    "react-dom": "^16.13.0",
+    "react-paginate": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
