--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "blueimp-md5": "^2.19.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
-    "react-paginate": "^8.0.1",
+    "react-paginate": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
   },
