--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "blueimp-md5": "^2.19.0",
     "firebase": "^7.23.0",
     "react": "^16.13.0",
-    "react-bootstrap": "^2.0.0-rc.1",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^16.13.0",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.1.2",
