--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,11 @@
     "react-dom": "^16.13.0",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "uuid": "^8.3.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
