get uid and store

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^5.3.5",
     "express-session": "^1.17.2",
     "flat": "^5.0.2",
+    "mongodb": "^4.2.1",
     "node-redis": "^0.1.7",
     "redis": "^4.0.0"
   }
