--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^16.13.0",
+    "react-icons": "^4.3.1",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
@@ -27,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
