--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,17 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "blueimp-md5": "^2.19.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^7.23.0",
     "react": "^16.13.0",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^16.13.0",
     "react-paginate": "^7.1.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web-vitals": "^2.1.2"
   }
 }
