--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.23.0",
     "blueimp-md5": "^2.19.0",
     "firebase": "^7.23.0",
+    "imagecmp": "^1.0.2",
     "react": "^16.13.0",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^16.13.0",
