--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,11 @@
     "react-dom": "^16.13.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^7.1.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
@@ -30,7 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
