--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "blueimp-md5": "^2.19.0",
     "bootstrap": "^5.1.3",
     "firebase": "^7.23.0",
+    "gm": "^1.23.1",
+    "imagecmp": "^1.0.2",
     "react": "^16.13.0",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^16.13.0",
