fix bugs in userprofile

--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,5 @@ REACT_APP_FIREBASE_PROJECT_ID=restaurants-b5bb8
 REACT_APP_FIREBASE_STORAGE_BUCKET=restaurants-b5bb8.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=915452779844
 REACT_APP_FIREBASE_APP_ID=1:915452779844:web:88169852e78dce25d60b11
+
+CHOKIDAR_USEPOLLING=true
