--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "blueimp-md5": "^2.19.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.5.0",
+    "gm": "^1.23.1",
     "imagecmp": "^1.0.2",
+    "imagemagick": "^0.1.3",
     "react": "^16.13.0",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^16.13.0",
