--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "base64-to-image": "^1.0.2",
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.5",
     "express-session": "^1.17.2",
     "flat": "^5.0.2",
+    "gm": "^1.23.1",
+    "imagecmp": "^1.0.2",
+    "imagemagick": "^0.1.3",
     "mongodb": "^4.2.1",
     "node-redis": "^0.1.7",
     "redis": "^3.1.2",
